# PandaPower

./: .env.example  .gitignore  .vercelignore  ACCESS_INFORMATION.md  APPLY_MIGRATION_NOW.txt  ARCHITECTURE_OVERVIEW.md  BACKEND_CONTINUOUS_OPERATION.md  CANDIDATE_MATCHING_GUIDE.md  CONTACTS_SYNC_SETUP.md  CONVERTAPI.md  CONVERTAPI_SETUP.md  CREATE_JOBS_TABLE.sql  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_QUICK_START.txt  DEPLOYMENT_READY.md  E2E_TESTING_GUIDE.md  EMAIL_BACKFILL_GUIDE.md  EMAIL_INTAKE_GUIDE.md  EMAIL_SYSTEM_IMPROVEMENTS.md  FIX_SCHEMA.md  FRONTEND_API_VALIDATION.md  FRONTEND_SETUP.md  HEALTH_CHECK_ENDPOINTS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_2026-05-23.md  IMPLEMENTATION_SUMMARY_SESSION_29.md  IMPLEMENTATION_SUMMARY_SESSION_30.md  IMPLEMENTATION_SUMMARY_SESSION_31.md  MIGRATE_JOBS_TABLE.sql  MIGRATION_INSTRUCTIONS.md  OVERRIDE_FEATURE_COMPLETE.md  PHASE4_COMPLETION_SUMMARY.md  PHASE4_IMPLEMENTATION.md  PHASE4_QUICK_START.md  PHASE_10_SKILL_NORMALIZATION.sql  PHASE_8_COMPLETION.md  PHASE_8_DB_MIGRATION.sql  PHASE_9_CANDIDATE_CREATION.sql  (+45 more)
apps/backend/: HEALTH_CHECK.md  IMPLEMENTATION_SUMMARY.md  MONITORING_GUIDE.md  PIPEDRIVE_NOTES_PREFIX.md  PIPEDRIVE_PREFIX_IMPLEMENTATION.md  QUICK_REFERENCE.md  SESSION_29_TOOL_EXECUTION_SUMMARY.md  SESSION_30_CANDIDATE_MATCHING.md  SESSION_31_JOB_CONTEXT_EXTRACTION.md  SESSION_32_REFERRAL_STATE_MACHINE.md  SESSION_33_ADMIN_NOTIFICATIONS.md  SETUP.md  START_HERE.md  celerybeat-schedule.db  pyproject.toml  requirements.txt  startup_celery_worker.sh  test_schema.py  (+3 more)
(+373 files in other folders)
