[project]
name = "pandapower"
version = "0.1.0"
description = "AI-powered recruitment system for PandaTech"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.108.0",
    "uvicorn==0.27.0",
    "pydantic==2.7.0",
    "pydantic-settings==2.2.0",
    "structlog==24.1.0",
    "python-dotenv==1.0.0",
    "httpx>=0.25.0",
    "supabase>=2.5.0",
    "celery==5.3.4",
    "anthropic>=0.7.0",
    "pypdf>=3.17.0",
    "python-docx>=0.8.11",
    "PyMuPDF>=1.23.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "langdetect>=1.0.9",
    "striprtf>=0.0.26",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "ruff==0.1.8",
    "mypy==1.7.1",
]

[tool.uv]
dev-dependencies = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "ruff==0.1.8",
    "mypy==1.7.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".venv", "dist", "build"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.hatchling.build.targets.wheel]
packages = ["src/pandapower"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
